# trojan-qt

./: .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml
.azp/common/: post-upload.sh  pre-upload.sh
.azp/macos/: build.sh  deps.sh  upload.sh
.azp/windows-msvc/: build.sh  deps.sh  upload.sh
cmake/: CopyQt5Deps.cmake
src/: AppManager.cpp  AppManager.h  BodyWidget.cpp  CMakeLists.txt  Info.plist  Window.cpp  Window.h  trojan-qt.pro
